# JD-Vector

./: .gitignore  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml  요구사항.md
apps/server/: .dockerignore  .env.example  CORS_SETUP.md  DEPLOYMENT.md  Dockerfile  deploy.ps1  fly.toml  main.py  pyproject.toml  update-cors.ps1
apps/server/app/: __init__.py
apps/server/app/api/v1/: router.py
apps/server/app/api/v1/endpoints/: analysis.py  health.py  roadmap.py  upload.py
apps/server/app/core/: config.py  cors.py
apps/server/app/core/rag/: __init__.py  document_loader.py  embeddings.py  retriever.py  text_splitter.py  vector_store.py
apps/server/app/models/: schemas.py
apps/server/app/services/: ingestion_service.py  roadmap_service.py  upload_service.py
apps/server/app/utils/: pdf_parser.py
apps/web/: .env.example  .eslintrc.json  DEPLOYMENT_VERCEL.md  QUICKSTART.md  deploy-vercel.ps1  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: vite-env.d.ts
apps/web/src/app/: App.css  App.tsx  main.tsx
apps/web/src/components/analysis/: CompetencyChart.tsx  DocumentPanel.tsx  FeedbackCard.tsx  FeedbackSection.tsx  MatchScore.tsx  feedbackConfig.ts
apps/web/src/components/common/: LoadingSpinner.tsx  TechIcon.tsx
apps/web/src/components/layout/: Header.tsx
apps/web/src/components/roadmap/: ProgressTracker.tsx  RoadmapResourceItem.tsx  RoadmapWeekCard.tsx
apps/web/src/components/ui/: StatCard.tsx
apps/web/src/components/upload/: FileUpload.tsx  UploadLoadingOverlay.tsx  UploadProgressSteps.tsx
apps/web/src/hooks/: useRoadmapProgress.ts
apps/web/src/pages/: AnalysisPage.tsx  ResultPage.tsx  RoadmapPage.tsx  UploadPage.tsx
apps/web/src/services/: analysisService.ts  roadmapService.ts
apps/web/src/styles/: index.css
apps/web/src/types/: roadmap.types.ts
apps/web/src/utils/: apiCache.ts  labelMapper.ts  scoreNormalization.ts
scripts/: init-project.sh  supabase_setup.sql
