[tool.poetry]
name = "jd-vector-server"
version = "0.1.0"
description = "AI-powered Job Description Analyzer Backend"
authors = ["JD-Vector Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI 관련
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"

# LangChain 생태계
langchain = "^0.1.7"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.20"
openai = "^1.12.0"

# PDF 처리
pypdf = "^4.0.1"
pdfplumber = "^0.10.3"
PyMuPDF = "^1.23.20"

# 벡터 DB 및 임베딩
supabase = "^2.3.4"
pgvector = "^0.2.4"
# chromadb = "^0.4.22"  # Phase 3에서 활성화 (C++ 빌드 도구 필요)
# sentence-transformers = "^2.3.1"  # Phase 3에서 활성화

# 데이터베이스
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# 파일 처리
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"

# 데이터 처리
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
tiktoken = "^0.5.2"

# HTTP 클라이언트
httpx = "^0.26.0"

# 환경 변수
python-dotenv = "^1.0.1"

# 유틸리티
pydantic-extra-types = "^2.4.1"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"  # 재시도 로직

[tool.poetry.group.dev.dependencies]
# 테스트
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"

# 린터 및 포매터
black = "^24.1.1"
ruff = "^0.1.15"
mypy = "^1.8.0"

# 개발 도구
ipython = "^8.20.0"
ipdb = "^0.13.13"

[tool.poetry.group.data.dependencies]
# 데이터 분석
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | alembic
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
